Pins Ansible Collection in prep for migration to pynetbox 5

--- a/requirements.yml
+++ b/requirements.yml
@@ -1,6 +1,7 @@
 ---
 collections:
-  - netbox.netbox
+  - name: netbox.netbox
+    version: 0.2.3
 
 roles:
   - name: ansible-network.network-engine
