--- a/ansible.cfg
+++ b/ansible.cfg
@@ -9,3 +9,4 @@ host_key_checking = False
 library = /etc/ansible/library/
 localhost_warning = False
 retry_files_enabled = False
+stdout_callback = yaml
