--- a/.yamllint.yml
+++ b/.yamllint.yml
@@ -2,9 +2,16 @@
 extends: default
 
 rules:
-  line-length:
-    max: 120
   truthy: disable
-  key_duplicates: disable
-  key_value: disable
+  line-length:
+    allow-non-breakable-inline-mappings: true
+    allow-non-breakable-words: true
+    max: 220
+  brackets:
+    min-spaces-inside: 0
+    max-spaces-inside: 1
+  braces:
+    min-spaces-inside: 0
+    max-spaces-inside: 1
+  document-start: disable
 ...
