Updates to use all.yml

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+# Exclude env files
+*.env
 
 # Created by https://www.gitignore.io/api/python,ansible,sublimetext,visualstudiocode
 # Edit at https://www.gitignore.io/?templates=python,ansible,sublimetext,visualstudiocode
