--- a/00_setup_netbox_devices.yml
+++ b/00_setup_netbox_devices.yml
@@ -9,25 +9,25 @@
       netbox.netbox.netbox_site:
         netbox_url: "{{ lookup('ENV', 'NETBOX_URL') }}"
         netbox_token: "{{ lookup('ENV', 'NETBOX_API_KEY') }}"
-        data:
-          name: "MINNESOTA01"
-          time_zone: America/Chicago
-          status: active
-          description: Dev
-          contact_name: Josh
-          contact_email: josh@josh-v.com
+        data: "{{ site }}"
         state: "{{ install_state }}"
       register: site_setup
+      loop: "{{ sites }}"
+      loop_control:
+        loop_var: site
+        label: "{{ site['name'] }}"
       tags: [ sites, devices ]
 
     - name: "TASK 2: SETUP RACKS"
       netbox.netbox.netbox_rack:
         netbox_url: "{{ lookup('ENV', 'NETBOX_URL') }}"
         netbox_token: "{{ lookup('ENV', 'NETBOX_API_KEY') }}"
-        data:
-          name: "MN_01"
-          site: "MINNESOTA01"
+        data: "{{ rack }}"
         state: "{{ install_state }}"
+      loop: "{{ racks }}"
+      loop_control:
+        loop_var: rack
+        label: "{{ rack['name'] }}"
       tags: [ sites, devices ]
 
     - name: "TASK 3: SETUP MANUFACTURERS"
@@ -35,13 +35,11 @@
         netbox_url: "{{ lookup('ENV', 'NETBOX_URL') }}"
         netbox_token: "{{ lookup('ENV', 'NETBOX_API_KEY') }}"
         data:
-          name: "{{ item }}"
+          name: "{{ manufacturer }}"
         state: "{{ install_state }}"
-      loop:
-        - Arista
-        - Cisco
-        - CustomBuild
-        - Raspberry Pi
+      loop: "{{ manufacturers }}"
+      loop_control:
+        loop_var: manufacturer
       tags: [ devices ]
 
     - name: "TASK 4: SETUP DEVICE TYPES"
@@ -49,21 +47,17 @@
         netbox_url: "{{ lookup('ENV', 'NETBOX_URL') }}"
         netbox_token: "{{ lookup('ENV', 'NETBOX_API_KEY') }}"
         data:
-          model: "{{ item.model }}"
-          manufacturer: "{{ item.manufacturer }}"
-          slug: "{{ item.slug }}"
-          part_number: "{{ item.part_number }}"
+          model: "{{ device_type.model }}"
+          manufacturer: "{{ device_type.manufacturer }}"
+          slug: "{{ device_type.slug }}"
+          part_number: "{{ device_type.part_number }}"
           u_height: 1
-          is_full_depth: "{{ item.full_depth }}"
+          is_full_depth: "{{ device_type.full_depth }}"
         state: "{{ install_state }}"
-      loop:
-        - {"model": "IOSv", "manufacturer": "Cisco", "slug": "iosv", "part_number": "iosv", "full_depth": False}
-        - {"model": "nxosv", "manufacturer": "Cisco", "slug": "nxosv", "part_number": "nxosv", "full_depth": False}
-        - {"model": "nx-osv-chassis-nx-osv-supervisor-module", "manufacturer": "Cisco", "slug": "nx-osv-chassis-nx-osv-supervisor-module", "part_number": "nx-osv-chassis-nx-osv-supervisor-module", "full_depth": False}
-        - {"model": "CSR1000v", "manufacturer": "Cisco", "slug": "csr1000v", "part_number": "csr1000v", "full_depth": False}
-        - {"model": "ASAv", "manufacturer": "Cisco", "slug": "asav", "part_number": "asav", "full_depth": False}
-        - {"model": "CustomServer", "manufacturer": "CustomBuild", "slug": "customserver", "part_number": "home", "full_depth": True}
-        - {"model": "vEOS", "manufacturer": "Arista", "slug": "veos", "part_number": "veos", "full_depth": False}
+      loop: "{{ device_types }}"
+      loop_control:
+        loop_var: device_type
+        label: "{{ device_type['model'] }}"
       tags: [ devices ]
 
     - name: "TASK 5: SETUP PLATFORMS"
@@ -71,21 +65,13 @@
         netbox_url: "{{ lookup('ENV', 'NETBOX_URL') }}"
         netbox_token: "{{ lookup('ENV', 'NETBOX_API_KEY') }}"
         data:
-          name: "{{ item.name }}"
-          slug: "{{ item.slug }}"
+          name: "{{ platform.name }}"
+          slug: "{{ platform.slug }}"
         state: "{{ install_state }}"
-      loop:
-        - { name: EOS, slug: eos }
-        - { name: IOS, slug: ios }
-        - { name: IOS-XE, slug: ios-xe }
-        - { name: NXOS, slug: nxos }
-        - { name: Raspbian, slug: raspbian }
-        - { name: Ubuntu 18.04, slug: ubuntu1804 }
-        - { name: Ubuntu 16.04, slug: ubuntu1604 }
-        - { name: Ubuntu 20.04, slug: ubuntu2004 }
-        - { name: Windows 2012, slug: win2012 }
-        - { name: Windows 2016, slug: win2016 }
-        - { name: Windows 2019, slug: win2019 }
+      loop: "{{ platforms }}"
+      loop_control:
+        loop_var: platform
+        label: "{{ platform['name'] }}"
       tags: [ devices ]
 
     - name: "TASK 6: SETUP DEVICE ROLES"
@@ -93,18 +79,14 @@
         netbox_url: "{{ lookup('ENV', 'NETBOX_URL') }}"
         netbox_token: "{{ lookup('ENV', 'NETBOX_API_KEY') }}"
         data:
-          name: "{{ item.name }}"
-          color: "{{ item.color }}"
-          vm_role: "{{ item.vmrole }}"
+          name: "{{ device_role.name }}"
+          color: "{{ device_role.color }}"
+          vm_role: "{{ device_role.vmrole }}"
         state: "{{ install_state }}"
-      loop:
-        - { name: Firewall, color: FF0000, vmrole: true }
-        - { name: Router, color: 000080, vmrole: true }
-        - { name: Switch, color: 008000, vmrole: true }
-        - { name: Server, color: "000000", vmrole: false }
-        - { name: VM, color: 00FFFF, vmrole: true }
-        - { name: Leaf, color: 008000, vmrole: false }
-        - { name: Spine, color: 0000FF, vmrole: false }
+      loop: "{{ device_roles }}"
+      loop_control:
+        loop_var: device_role
+        label: "{{ device_role['name'] }}"
       tags: [ devices ]
 
     - name: "TASK 7: SETUP VLANS"
@@ -112,26 +94,28 @@
         netbox_url: "{{ lookup('ENV', 'NETBOX_URL') }}"
         netbox_token: "{{ lookup('ENV', 'NETBOX_API_KEY') }}"
         data:
-          name: "VLAN{{ item.vid }}"
-          vid: "{{ item.vid }}"
+          name: "VLAN{{ vlan.vid }}"
+          vid: "{{ vlan.vid }}"
           site: "MINNESOTA01"
-          description: "{{ item.desc }}"
+          description: "{{ vlan.desc }}"
         state: "{{ install_state }}"
       register: result
+      loop: "{{ vlans }}"
+      loop_control:
+        loop_var: vlan
+        label: "{{ vlan['vid'] }}"
       tags: [ ipam ]
-      loop:
-        - { vid: 100, desc: Demo VLAN }
-        - { vid: 200, desc: Primary VLAN }
-        - { vid: 300, desc: Secondary VLAN }
 
     - name: "TASK 8: SETUP RFC1918 RIR"
       netbox.netbox.netbox_rir:
         netbox_url: "{{ lookup('ENV', 'NETBOX_URL') }}"
         netbox_token: "{{ lookup('ENV', 'NETBOX_API_KEY') }}"
-        data:
-          name: RFC1918
-          is_private: True
+        data: "{{ rir }}"
         state: "{{ install_state }}"
+      loop: "{{ rirs }}"
+      loop_control:
+        loop_var: rir
+        label: "{{ rir['name'] }}"
       tags: [ ipam ]
 
     - name: "TASK 8: SETUP AGGREGRATES"
@@ -139,15 +123,14 @@
         netbox_url: "{{ lookup('ENV', 'NETBOX_URL') }}"
         netbox_token: "{{ lookup('ENV', 'NETBOX_API_KEY') }}"
         data:
-          prefix: "{{ item.name }}"
-          description: "{{ item.desc }}"
-          rir: RFC1918
+          prefix: "{{ aggregate.name }}"
+          description: "{{ aggregate.desc }}"
+          rir: "{{ aggregate.rir }}"
         state: "{{ install_state }}"
-      loop:
-        - { name: "10.0.0.0/8", desc: RFC1918 - 10 }
-        - { name: "172.16.0.0/12", desc: RFC1918 - 172 }
-        - { name: "192.0.2.0/24", desc: RFC5735 - 192.0.2.0 }
-        - { name: "192.168.0.0/16", desc: RFC1918 - 192 }
+      loop: "{{ aggregates }}"
+      loop_control:
+        loop_var: aggregate
+        label: "{{ aggregate['name'] }}"
       tags: [ ipam ]
 
     - name: "TASK 9: SETUP PREFIXES"
@@ -156,55 +139,50 @@
         netbox_token: "{{ lookup('ENV', 'NETBOX_API_KEY') }}"
         data:
           family: 4
-          prefix: "{{ item.prefix }}"
-          site: "MINNESOTA01"
-          status: Active
-          description: "{{ item.desc }}"
-          is_pool: "{{ item.ispool }}"
+          prefix: "{{ prefix.prefix }}"
+          site: "{{ prefix.site | default(omit) }}"
+          status: "{{ prefix.status | default('Active') }}"
+          description: "{{ prefix.desc }}"
+          is_pool: "{{ prefix.ispool }}"
         state: "{{ install_state }}"
-      loop:
-        - { prefix: 10.50.50.0/24, desc: GNS3 Loopbacks, ispool: true }
-        - { prefix: 172.31.0.0/24, desc: GNS3 - DC, ispool: false }
-        - { prefix: 172.31.1.0/24, desc: GNS3 - DC Mgmt, ispool: false }
-        - { prefix: 192.168.0.0/24, desc: GNS3 Remote, ispool: false }
-        - { prefix: 192.0.2.0/24, desc: Example Network, ispool: true }
+      loop: "{{ prefixes }}"
+      loop_control:
+        loop_var: prefix
+        label: "{{ prefix['prefix'] }}"
       tags: [ ipam ]
 
     - name: "TASK 10: SETUP CIRCUIT PROVIDER"
       netbox.netbox.netbox_provider:
         netbox_url: "{{ lookup('ENV', 'NETBOX_URL') }}"
         netbox_token: "{{ lookup('ENV', 'NETBOX_API_KEY') }}"
-        data:
-          name: Charter Spectrum
-          asn: 7843
-          account: AGOODPAYING_ONE
-          portal_url: http://spectrum.net
-          noc_contact: noc@spectrum.net
-          comments: "BEST I CAN GET"
+        data: "{{ circuit_provider }}"
         state: "{{ install_state }}"
+      loop: "{{ circuit_providers }}"
+      loop_control:
+        loop_var: circuit_provider
+        label: "{{ circuit_provider['name'] }}"
       tags: [ circuit ]
 
     - name: Create type within Netbox with only required information
       netbox.netbox.netbox_circuit_type:
         netbox_url: "{{ lookup('ENV', 'NETBOX_URL') }}"
         netbox_token: "{{ lookup('ENV', 'NETBOX_API_KEY') }}"
-        data:
-          name: Cable
+        data: "{{ circuit_type }}"
         state: "{{ install_state }}"
+      loop: "{{ circuit_types }}"
+      loop_control:
+        loop_var: circuit_type
+        label: "{{ circuit_type['name'] }}"
       tags: [ circuit ]
 
     - name: "CREATE LOCAL CIRCUIT"
       netbox.netbox.netbox_circuit:
         netbox_url: "{{ lookup('ENV', 'NETBOX_URL') }}"
         netbox_token: "{{ lookup('ENV', 'NETBOX_API_KEY') }}"
-        data:
-          cid: my-circuit-id
-          provider: Charter Spectrum
-          circuit_type: Cable
-          status: Active
-          install_date: "2016-06-01"
-          commit_rate: 200000000
-          description: Charter Spectrum Cable Internet
-          comments: "Delivered"
+        data: "{{ circuit }}"
         state: "{{ install_state }}"
+      loop: "{{ circuits }}"
+      loop_control:
+        loop_var: circuit
+        label: "{{ circuit['cid'] }}"
       tags: [ circuit ]
